# multi-doc-chat

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: aws.yml  task_defination.json
data/: goldens.csv
data/session_20260428_183408_436628b8/: cc8b6e06.pptx
data/session_20260429_190140_492f4dd2/: b3efc821.docx
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: __init__.py
multi_doc_chat/utils/: document_ops.py  model_loader.py
notebook/: Evaluations.ipynb  RAG.ipynb  experiments.ipynb
static/: style.css
templates/: index.html
test/unit/: test_data_ingestion.py
