[project]
name = "multi-doc-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.129.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.4",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pypdf>=6.7.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_doc_chat*"]